reduced js and css to single files, fixed nav collapse, fixed logo

--- a/css/site.css
+++ b/css/site.css
@@ -8,6 +8,10 @@ body, h1, h2, h3, h4, h5, h6 {
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
+.navbar-brand {
+    margin-top:-7px;
+}
+
 .navbar-btn {
     margin-left: 15px;
 }
